FEAT: Spring Security ve Hibernate yapılandırması tamamlandı.